moved default handling and input overrides to AbstractFeatureStore