@@ -1,14 +1,9 @@
 package com.litti.ml.feature.store;
 
+import com.google.common.collect.Sets;
 import com.litti.ml.entities.dtypes.JsonDataReader;
 import com.litti.ml.entities.feature.FeatureGroup;
 import com.litti.ml.entities.feature.FeatureMetadata;
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.time.LocalDate;
-import java.util.*;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import org.apache.avro.generic.GenericRecord;
 import org.apache.curator.shaded.com.google.common.io.Resources;
 import org.apache.hadoop.conf.Configuration;
@@ -18,6 +13,13 @@ import org.apache.parquet.hadoop.ParquetReader;
 import org.apache.parquet.hadoop.util.HadoopInputFile;
 import org.apache.parquet.io.InputFile;
 
+import java.io.IOException;
+import java.net.URISyntaxException;
+import java.time.LocalDate;
+import java.util.*;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
 public class LocalParquetFeatureStore extends AbstractFeatureStore {
 
   private final String name = "LocalParquet";
@@ -25,6 +27,7 @@ public class LocalParquetFeatureStore extends AbstractFeatureStore {
   private final JsonDataReader jsonDataReader;
 
   public LocalParquetFeatureStore(JsonDataReader jsonDataReader) {
+    super(jsonDataReader);
     this.jsonDataReader = jsonDataReader;
     this.records = readAllLocalRecords();
   }
@@ -35,54 +38,40 @@ public class LocalParquetFeatureStore extends AbstractFeatureStore {
   }
 
   @Override
-  public FeatureFetchResult fetchFeatureFromStore(
-      List<FeatureMetadata> featureMetadataList,
+  public Optional<Map<String, ?>> fetchFeatureFromStore(
+      Set<FeatureMetadata> featureMetadataSet,
       FeatureGroup featureGroup,
       Map<String, String> dimensions) {
 
     Predicate<GenericRecord> dimensionFilterQuery =
         generateDimensionFilterQuery(dimensions, featureGroup);
 
-    Optional<FeatureFetchResult> featureFetchResult =
-        queryLocalFile(featureMetadataList, dimensionFilterQuery);
-
-    if (!featureFetchResult.isEmpty()) {
-      return featureFetchResult.get();
-    }
-    Map<String, ?> defaultFeatures = createDefaultFeatures(featureMetadataList);
-
-    return new FeatureFetchResult(
-        defaultFeatures,
-        featureMetadataList.stream().map(FeatureMetadata::name).collect(Collectors.toSet()),
-        Collections.emptySet());
+    return queryLocalFile(featureMetadataSet, dimensionFilterQuery);
   }
 
-  private Optional<FeatureFetchResult> queryLocalFile(
-      List<FeatureMetadata> featureMetadataList, Predicate<GenericRecord> dimensionFilterQuery) {
-    Set<String> featureStoreMisses = new HashSet<>();
+  private Optional<Map<String, ?>> queryLocalFile(
+      Set<FeatureMetadata> featureMetadataSet, Predicate<GenericRecord> dimensionFilterQuery) {
     List<Map<String, Object>> featureValues =
         this.records.stream()
             .filter(dimensionFilterQuery)
             .map(
                 record -> {
-                  Map<String, Object> features = new HashMap<>();
-                  featureMetadataList.forEach(
-                      f -> {
-                        if (record.hasField(f.name()) && record.get(f.name()) != null) {
-                          features.put(
-                              f.name(), jsonDataReader.read(record.get(f.name()), f.dataType()));
-                        } else {
-                          features.put(
-                              f.name(), jsonDataReader.read(f.defaultValue(), f.dataType()));
-                          featureStoreMisses.add(f.name());
-                        }
-                      });
-                  return features;
+                  return featureMetadataSet.stream()
+                      .filter(f -> record.hasField(f.name()) && record.get(f.name()) != null)
+                      .map(
+                          f ->
+                              Map.entry(
+                                  f.name(),
+                                  jsonDataReader.read(record.get(f.name()), f.dataType())))
+                      .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
                 })
-            .collect(Collectors.toList());
+            .toList();
     if (!featureValues.isEmpty()) {
-      return Optional.of(
-          new FeatureFetchResult(featureValues.get(0), featureStoreMisses, Collections.emptySet()));
+      final Set<String> featureStoreMisses =
+          Sets.difference(
+              featureMetadataSet.stream().map(FeatureMetadata::name).collect(Collectors.toSet()),
+              featureValues.get(0).keySet());
+      return Optional.of(featureValues.get(0));
     }
     return Optional.empty();
   }
@@ -106,12 +95,6 @@ public class LocalParquetFeatureStore extends AbstractFeatureStore {
                 baseFilterQuery.and(
                     record -> record.get(entry.getKey()).toString().equals(entry.getValue())))
         .reduce(baseFilterQuery, Predicate::and);
-  }
-
-  private Map<String, ?> createDefaultFeatures(List<FeatureMetadata> featureMetadataList) {
-    return featureMetadataList.stream()
-        .map(f -> Map.entry(f.name(), jsonDataReader.read(f.defaultValue(), f.dataType())))
-        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
   }
 
   private List<GenericRecord> readAllLocalRecords() {
